packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_transpile_ts_only.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 2626
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
//
const q_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = /*#__PURE__*/ _noopQrl("App_component_Cmp_p_q_e_click_Yl4ybrJWrt4");
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrl("App_component_ckEPmXZlub0");
//
q_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4.s(()=>console.log('warn'));
q_App_component_ckEPmXZlub0.s((props)=>{
    return <Cmp>
			<p class="stuff" q-e:click={q_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4}>Hello Qwik</p>
		</Cmp>;
});
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;8CAM8B,IAAM,QAAQ,GAAG,CAAC;8BAHlB,CAAC;IAC9B,QACE,IAAI;GACJ,CAAC,EAAE,MAAM,QAAQ,wDAAqC,UAAU,EAAE,EAAE;EACrE,EAAE;AAEJ;AANA,OAAO,MAAM,oBAAM,0CAMhB\"}")
== DIAGNOSTICS ==

[]
