packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_ts_enums_no_transpile.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 2226
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export enum Thing {
	A,
	B
}

export const App = component$(() => {
	console.log(Thing.A);
	return (
		<>
			<p class="stuff">Hello Qwik</p>
		</>
	);
});

============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export enum Thing {
    A,
    B
}
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,YAAY;IACX;IACA;;AAGD,OAAO,MAAM,oBAAM,0CAOhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

import { Thing } from "./test";
//
export const App_component_ckEPmXZlub0 = ()=>{
    console.log(Thing.A);
    return <>
			<p class="stuff">Hello Qwik</p>
		</>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAQ8B;IAC7B,QAAQ,GAAG,CAAC,MAAM,CAAC;IACnB,SACG;GACD,CAAC,EAAE,MAAM,QAAQ,UAAU,EAAE,EAAE;EAChC;AAEF\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    118,
    210
  ]
}
*/
== DIAGNOSTICS ==

[]
