packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_use_client_effect.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 1480
expression: output
---
==INPUT==


import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@qwik.dev/core';

export const Child = component$(() => {
	const state = useStore({
		count: 0
	});

	// Double count watch
	useBrowserVisibleTask$(() => {
		const timer = setInterval(() => {
		state.count++;
		}, 1000);
		return () => {
		clearInterval(timer);
		}
	});

	return (
		<div>
		{state.count}
	</div>
	);
});


============================= test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const Child_component_useBrowserVisibleTask_0IGFPOyJmQA = ()=>{
    const state = _captures[0];
    const timer = setInterval(()=>{
        state.count++;
    }, 1000);
    return ()=>{
        clearInterval(timer);
    };
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;iEASwB;;IACtB,MAAM,QAAQ,YAAY;QAC1B,MAAM,KAAK;IACX,GAAG;IACH,OAAO;QACP,cAAc;IACd\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
  "entry": null,
  "displayName": "test.tsx_Child_component_useBrowserVisibleTask",
  "hash": "0IGFPOyJmQA",
  "canonicalFilename": "test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA",
  "path": "",
  "extension": "js",
  "parent": "Child_component_9GyF01GDKqw",
  "ctxKind": "function",
  "ctxName": "useBrowserVisibleTask$",
  "captures": true,
  "loc": [
    224,
    344
  ],
  "captureNames": [
    "state"
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Child_component_9GyF01GDKqw = /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_9GyF01GDKqw"), "Child_component_9GyF01GDKqw");
//
export const Child = /*#__PURE__*/ componentQrl(q_Child_component_9GyF01GDKqw);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,sBAAQ,4CAoBlB\"}")
============================= test.tsx_Child_component_9GyF01GDKqw.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
//
const q_Child_component_useBrowserVisibleTask_0IGFPOyJmQA = /*#__PURE__*/ qrl(()=>import("./test.tsx_Child_component_useBrowserVisibleTask_0IGFPOyJmQA"), "Child_component_useBrowserVisibleTask_0IGFPOyJmQA");
//
export const Child_component_9GyF01GDKqw = ()=>{
    const state = useStore({
        count: 0
    });
    // Double count watch
    useBrowserVisibleTaskQrl(q_Child_component_useBrowserVisibleTask_0IGFPOyJmQA.w([
        state
    ]));
    return /*#__PURE__*/ _jsxSorted("div", null, null, _wrapProp(state, "count"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;2CAGgC;IAC/B,MAAM,QAAQ,SAAS;QACtB,OAAO;IACR;IAEA,qBAAqB;IACrB;;;IASA,qBACC,WAAC,6BACA;AAGH\"}")
/*
{
  "origin": "test.tsx",
  "name": "Child_component_9GyF01GDKqw",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "9GyF01GDKqw",
  "canonicalFilename": "test.tsx_Child_component_9GyF01GDKqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    126,
    395
  ]
}
*/
== DIAGNOSTICS ==

[]
